
2017-02-06  Ron Norman <rjn@inglenet.com>

	* common.c, common.h:
	  added cob_module_free so that structure gets freed within libcob
	* fileio.c, common.h:
	  Added new routines cob_file_external_addr,cob_file_malloc,cob_file_free
	  so that 'cob_file' is allocated within libcob
	  This will allow the stucture have fields added to the end
	  without forcing a recompile.

2017-02-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, common.h, call.c: [__MINGW32__] fixes for mixed printf
	  format modifiers for long long
	* common.c: [WIN32] check if PROCESS_QUERY_LIMITED_INFORMATION is
	  actually defined (not the case for MINGW and old VC versions)

2017-01-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c: Copyright year 2017

2017-01-10  Ron Norman <rjn@inglenet.com>

	* move.c, call.c, common.h: New routines added to provide
	  application C code access to COBOL data fields.

2017-01-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h, common.c (cob_check_subscript): corrected minimum check

2017-01-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c (field_accept): don't write anything on the screen for
	  ACCEPT OMITTED

2017-01-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, common.h: new exported function cob_raise to raise a signal,
	  running both external and internal signal handlers
	* termio.c (cob_accept_field): handle input code of ctrl-C as termination
	  command and cob_stop_run with 128 + 2 (fatal error 2)
	* coblocal.h, common.h: move (cob_get_current_date_and_time) and
	  its data definition cob_time from coblocal.h to common.h
	* common.c [_MSC_VER]: moved initialization of function pointer to
	  (get_function_ptr_for_precise_time), for call in
	  (cob_get_current_date_and_time)
	* common.h: extended cob_time with is_daylight_saving_time and day_of_year
	* common.c [_BSD_SOURCE]: get utc_offset directly from tm_gmtoff
